fixed uneven horizontal distribution

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -192,12 +192,12 @@ body {
 @media screen and (max-width: 800px) {
   body #background .svg-wrap {
     display: inline-block;
-    height: 55px;
-    width: 75px; }
+    height: 110px;
+    width: 130px; }
   body #background svg {
     float: left;
-    width: 65px;
-    height: 65px; }
+    width: 120px;
+    height: 120px; }
   body #wrapper #presents-wrapper {
     padding-top: 20vh;
     margin-top: 5vh; }
@@ -297,12 +297,12 @@ body {
 @media screen and (max-width: 420px) {
   body #background .svg-wrap {
     display: inline-block;
-    height: 50px;
-    width: 40px; }
+    height: 90px;
+    width: 80px; }
   body #background svg {
     float: left;
-    width: 40px;
-    height: 40px; }
+    width: 80px;
+    height: 80px; }
   body #wrapper #dummy {
     height: 30px; }
   body #wrapper #presents-wrapper {
